examples/canonical-eks/multi-role-platform/python/k8s/kustomize/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-role-platform-api
  namespace: accb-eks-platform
spec:
  replicas: 2
  selector:
    matchLabels: { app: multi-role-platform, role: api }
  template:
    metadata:
      labels: { app: multi-role-platform, role: api }
    spec:
      serviceAccountName: multi-role-platform
      containers:
        - name: api
          image: ghcr.io/someflydev/accb-canonical-eks-api:dev
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: /healthz, port: 8080 }
