examples/canonical-eks/multi-role-platform/python/k8s/kustomize/base/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: accb-eks-platform
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
